--- a/frontend-Hotel/src/app/components/Cliente/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Cliente/getall/getall.html
@@ -23,27 +23,13 @@
     >
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="id">
-                    ID <p-sortIcon field="id"></p-sortIcon>
-                </th>
-                <th pSortableColumn="first_name">
-                    Nombre <p-sortIcon field="first_name"></p-sortIcon>
-                </th>
-                <th pSortableColumn="last_name">
-                    Apellido <p-sortIcon field="last_name"></p-sortIcon>
-                </th>
-                <th pSortableColumn="document">
-                    Documento <p-sortIcon field="document"></p-sortIcon>
-                </th>
-                <th pSortableColumn="phone">
-                    Teléfono <p-sortIcon field="phone"></p-sortIcon>
-                </th>
-                <th pSortableColumn="email">
-                    Email <p-sortIcon field="email"></p-sortIcon>
-                </th>
-                <th pSortableColumn="nationality">
-                    Nacionalidad <p-sortIcon field="nationality"></p-sortIcon>
-                </th>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Documento</th>
+                <th>Teléfono</th>
+                <th>Email</th>
+                <th>Nacionalidad</th>
                 <th class="text-center">Acciones</th>
             </tr>
         </ng-template>
