--- a/frontend-Hotel/src/app/components/Habitacion/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Habitacion/getall/getall.html
@@ -23,13 +23,13 @@
     >
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="id">ID <p-sortIcon field="id"></p-sortIcon></th>
-                <th pSortableColumn="number">Número <p-sortIcon field="number"></p-sortIcon></th>
-                <th pSortableColumn="floor">Piso <p-sortIcon field="floor"></p-sortIcon></th>
-                <th pSortableColumn="description">Descripción <p-sortIcon field="description"></p-sortIcon></th>
-                <th pSortableColumn="capacity">Capacidad <p-sortIcon field="capacity"></p-sortIcon></th>
-                <th pSortableColumn="base_price">Precio Base <p-sortIcon field="base_price"></p-sortIcon></th>
-                <th pSortableColumn="available">Disponible <p-sortIcon field="available"></p-sortIcon></th>
+                <th>ID</th>
+                <th>Número</th>
+                <th>Piso</th>
+                <th>Descripción</th>
+                <th>Capacidad</th>
+                <th>Precio Base</th>
+                <th>Disponible</th>
                 <th class="text-center">Acciones</th>
             </tr>
         </ng-template>
