--- a/frontend-Hotel/src/app/components/Hotel/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Hotel/getall/getall.html
@@ -23,27 +23,13 @@
     >
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="id">
-                    ID <p-sortIcon field="id"></p-sortIcon>
-                </th>
-                <th pSortableColumn="address">
-                    Address <p-sortIcon field="address"></p-sortIcon>
-                </th>
-                <th pSortableColumn="city">
-                    City <p-sortIcon field="city"></p-sortIcon>
-                </th>
-                <th pSortableColumn="country">
-                    Country <p-sortIcon field="country"></p-sortIcon>
-                </th>
-                <th pSortableColumn="name">
-                    Name <p-sortIcon field="name"></p-sortIcon>
-                </th>
-                <th pSortableColumn="phone">
-                    Phone <p-sortIcon field="phone"></p-sortIcon>
-                </th>
-                <th pSortableColumn="stars">
-                    Stars <p-sortIcon field="stars"></p-sortIcon>
-                </th>
+                <th>ID</th>
+                <th>Address</th>
+                <th>City</th>
+                <th>Country</th>
+                <th>Name</th>
+                <th>Phone</th>
+                <th>Stars</th>
                 <th class="text-center">Acciones</th>
             </tr>
         </ng-template>
