--- a/frontend-Hotel/src/app/components/Pago/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Pago/getall/getall.html
@@ -23,11 +23,11 @@
     >
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="id">ID <p-sortIcon field="id"></p-sortIcon></th>
-                <th pSortableColumn="reservation_id">Reserva ID <p-sortIcon field="reservation_id"></p-sortIcon></th>
-                <th pSortableColumn="amount">Monto <p-sortIcon field="amount"></p-sortIcon></th>
-                <th pSortableColumn="method">Método <p-sortIcon field="method"></p-sortIcon></th>
-                <th pSortableColumn="payment_date">Fecha <p-sortIcon field="payment_date"></p-sortIcon></th>
+                <th>ID</th>
+                <th>Reserva ID</th>
+                <th>Monto</th>
+                <th>Método</th>
+                <th>Fecha</th>
                 <th class="text-center">Acciones</th>
             </tr>
         </ng-template>
