--- a/frontend-Hotel/src/app/components/Reserva/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Reserva/getall/getall.html
@@ -23,12 +23,12 @@
     >
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="client_id">Cliente <p-sortIcon field="client_id"></p-sortIcon></th>
-                <th pSortableColumn="room_id">Habitación <p-sortIcon field="room_id"></p-sortIcon></th>
-                <th pSortableColumn="checkin_date">Fecha de Check-in <p-sortIcon field="checkin_date"></p-sortIcon></th>
-                <th pSortableColumn="checkout_date">Fecha de Check-out <p-sortIcon field="checkout_date"></p-sortIcon></th>
-                <th pSortableColumn="total_amount">Precio Total <p-sortIcon field="total_amount"></p-sortIcon></th>
-                <th pSortableColumn="status">Estado <p-sortIcon field="status"></p-sortIcon></th>
+                <th>Cliente</th>
+                <th>Habitación</th>
+                <th>Fecha de Check-in</th>
+                <th>Fecha de Check-out</th>
+                <th>Precio Total</th>
+                <th>Estado</th>
                 <th class="text-center">Acciones</th>
             </tr>
         </ng-template>
