--- a/frontend-Hotel/src/app/components/Servicio/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Servicio/getall/getall.html
@@ -23,9 +23,9 @@
     >
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="name">Nombre <p-sortIcon field="name"></p-sortIcon></th>
-                <th pSortableColumn="description">Descripción <p-sortIcon field="description"></p-sortIcon></th>
-                <th pSortableColumn="price">Precio <p-sortIcon field="price"></p-sortIcon></th>
+                <th>Nombre</th>
+                <th>Descripción</th>
+                <th>Precio</th>
                 <th class="text-center">Acciones</th>
             </tr>
         </ng-template>
