--- a/frontend-Hotel/src/app/components/Tarifa/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Tarifa/getall/getall.html
@@ -23,10 +23,10 @@
     >
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="id">ID <p-sortIcon field="id"></p-sortIcon></th>
-                <th pSortableColumn="description">Descripción <p-sortIcon field="description"></p-sortIcon></th>
-                <th pSortableColumn="amount">Monto <p-sortIcon field="amount"></p-sortIcon></th>
-                <th pSortableColumn="currency">Moneda <p-sortIcon field="currency"></p-sortIcon></th>
+                <th>ID</th>
+                <th>Descripción</th>
+                <th>Monto</th>
+                <th>Moneda</th>
                 <th class="text-center">Acciones</th>
             </tr>
         </ng-template>
