--- a/frontend-Hotel/src/app/components/Temporada/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Temporada/getall/getall.html
@@ -23,11 +23,11 @@
     >
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="id">ID <p-sortIcon field="id"></p-sortIcon></th>
-                <th pSortableColumn="name">Nombre <p-sortIcon field="name"></p-sortIcon></th>
-                <th pSortableColumn="start_date">Fecha de Inicio <p-sortIcon field="start_date"></p-sortIcon></th>
-                <th pSortableColumn="end_date">Fecha de Fin <p-sortIcon field="end_date"></p-sortIcon></th>
-                <th pSortableColumn="price_multiplier">Multiplicador de Precio <p-sortIcon field="price_multiplier"></p-sortIcon></th>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Fecha de Inicio</th>
+                <th>Fecha de Fin</th>
+                <th>Multiplicador de Precio</th>
                 <th class="text-center">Acciones</th>
             </tr>
         </ng-template>
