--- a/frontend-Hotel/src/app/components/TipoHabitacion/getall/getall.html
+++ b/frontend-Hotel/src/app/components/TipoHabitacion/getall/getall.html
@@ -23,21 +23,11 @@
     >
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="id">
-                    ID <p-sortIcon field="id"></p-sortIcon>
-                </th>
-                <th pSortableColumn="name">
-                    Nombre <p-sortIcon field="name"></p-sortIcon>
-                </th>
-                <th pSortableColumn="description">
-                    Descripción <p-sortIcon field="description"></p-sortIcon>
-                </th>
-                <th pSortableColumn="max_people">
-                    Max. Personas <p-sortIcon field="max_people"></p-sortIcon>
-                </th>
-                <th pSortableColumn="includes_breakfast">
-                    Incluye Desayuno <p-sortIcon field="includes_breakfast"></p-sortIcon>
-                </th>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Descripción</th>
+                <th>Max. Personas</th>
+                <th>Incluye Desayuno</th>
                 <th class="text-center">Acciones</th>
             </tr>
         </ng-template>
