--- a/frontend-Hotel/src/app/components/layout/header/header.html
+++ b/frontend-Hotel/src/app/components/layout/header/header.html
@@ -1,4 +1,8 @@
-<div class="w-full flex justify-end items-center gap-2 px-4">
+<div class="header-container">
+  <div class="header-content">
+    <h1 class="header-title">Hotel Management System</h1>
+  </div>
+  <div class="header-actions">
     <button *ngIf="isLoggedIn" type="button" class="text-orange-500 bg-gray-100 hover:bg-gray-200 rounded-full shadow hover:shadow-lg flex items-center justify-center w-10 h-10">
         <p-overlaybadge value="2">
             <i class="pi pi-bell text-xl"></i>
@@ -7,5 +11,6 @@
     <button type="button" class="text-orange-500 bg-gray-100 hover:bg-gray-200 rounded-full shadow hover:shadow-lg w-10 h-10 flex items-center justify-center" (click)="menu.toggle($event)">
         <i class="pi pi-user text-xl"></i>
     </button>
+  </div>
 </div>
 <p-tieredmenu #menu [model]="items" [popup]="true" />
